<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cream"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_undo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/icon_background"
            android:contentDescription="@string/undo"
            android:src="@android:drawable/ic_menu_revert" />

        <ImageButton
            android:id="@+id/btn_redo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/icon_background"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/redo"
            android:src="@android:drawable/ic_menu_rotate" />

        <ImageButton
            android:id="@+id/btn_color_picker"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:background="@color/black"
            android:contentDescription="@string/color_picker" />

        <ImageButton
            android:id="@+id/btn_brush_size"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/icon_background"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/brush_size"
            android:src="@android:drawable/ic_menu_edit" />

        <ImageButton
            android:id="@+id/btn_clear"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/icon_background"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/clear"
            android:src="@android:drawable/ic_menu_delete" />

        <ImageButton
            android:id="@+id/btn_save"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/icon_background"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/save"
            android:src="@android:drawable/ic_menu_save" />

        <ImageButton
            android:id="@+id/btn_gallery"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/icon_background"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/galery"
            android:src="@android:drawable/ic_menu_gallery" />

    </LinearLayout>

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/rangebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:valueFrom="1.0"
        android:valueTo="50.0"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="50dp"
        />

    <!-- glavni view za risanje iz knjižnice -->
    <com.mihir.drawingcanvas.drawingView
        android:id="@+id/draw_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/rangebar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>



